# learn-cmake

./: README.md
test_install/: CMakeLists.txt
test_install/src/: CMakeLists.txt  mylib.cpp
